today's progress, can't remember what shit we did
Co-authored-by: 69RAGE42 <69RAGE42@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
   <body>
     <div class="controller">
       <div class="center">
-        <span class="tri1" id="pxl105"></span>
-        <span class="tri2" id="pxl117"></span>
-        <span class="tri3" id="pxl123"></span>
-        <span class="tri4" id="pxl111"></span>
+        <span class="tri1" id="pxl105">
+          <a class=""></a>
+        </span>
+        <span class="tri2" id="pxl117">
+          <a class=""></a>
+        </span>
+        <span class="tri3" id="pxl123">
+          <a class=""></a>
+        </span>
+        <span class="tri4" id="pxl111">
+          <a class=""></a>
+        </span>
       </div>
       <button>START</button>
     </div>
