Co-authored-by: -_YoYo178_- <YoYo178@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -372,16 +372,28 @@
       <hr />
       <div class="stats-holder">
         <div class="stats-matrix" id="display-stats1"
-          style="grid-column: 1; grid-row: 1; border-right: 3px solid black; border-bottom: 3px solid black;"></div>
+          style="grid-column: 1; grid-row: 1; border-right: 3px solid black; border-bottom: 3px solid black;">
+          Killed Pawns: 0
+        </div>
         <div class="stats-matrix" id="display-stats2"
-          style="grid-column: 2; grid-row: 1; border-bottom: 3px solid black;"></div>
+          style="grid-column: 2; grid-row: 1; border-bottom: 3px solid black;">
+          Got Captured: 0
+        </div>
         <div class="stats-matrix" id="display-stats3"
-          style="grid-column: 1; grid-row: 2; border-right: 3px solid black; border-bottom: 3px solid black;"></div>
+          style="grid-column: 1; grid-row: 2; border-right: 3px solid black; border-bottom: 3px solid black;">
+          Safe Zone: 0
+        </div>
         <div class="stats-matrix" id="display-stats4"
-          style="grid-column: 2; grid-row: 2; border-bottom: 3px solid black;"></div>
+          style="grid-column: 2; grid-row: 2; border-bottom: 3px solid black;">
+          Got Saved: 0
+        </div>
         <div class="stats-matrix" id="display-stats5"
-          style="grid-column: 1; grid-row: 3; border-right: 3px solid black;"></div>
-        <div class="stats-matrix" id="display-stats6" style="grid-column: 2; grid-row: 3;"></div>
+          style="grid-column: 1; grid-row: 3; border-right: 3px solid black;">
+          Three Sixes: 0
+        </div>
+        <div class="stats-matrix" id="display-stats6" style="grid-column: 2; grid-row: 3;">
+          F: 0
+        </div>
       </div>
       <div class="counter-holder">
         <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b></b></div>
