added few elements and more graphics

--- a/index.html
+++ b/index.html
@@ -372,12 +372,9 @@
       <hr />
       <div class="stats-holder">
         <div class="stats-matrix" id="display-stats1"
-          style="grid-column: 1; grid-row: 1; border-right: 3px solid black; border-bottom: 3px solid black;">
-          Killed Pawns: 0
-        </div>
+          style="grid-column: 1; grid-row: 1; border-right: 3px solid black; border-bottom: 3px solid black;"></div>
         <div class="stats-matrix" id="display-stats2"
           style="grid-column: 2; grid-row: 1; border-bottom: 3px solid black;">
-          Got Captured: 0
         </div>
         <div class="stats-matrix" id="display-stats3"
           style="grid-column: 1; grid-row: 2; border-right: 3px solid black; border-bottom: 3px solid black;">
@@ -385,7 +382,6 @@
         </div>
         <div class="stats-matrix" id="display-stats4"
           style="grid-column: 2; grid-row: 2; border-bottom: 3px solid black;">
-          Got Saved: 0
         </div>
         <div class="stats-matrix" id="display-stats5"
           style="grid-column: 1; grid-row: 3; border-right: 3px solid black;">
@@ -396,12 +392,12 @@
         </div>
       </div>
       <div class="counter-holder">
-        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b></b></div>
+        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b>0</b></div>
       </div>
     </div>
     <div class="info-container" id="pop-up2">
@@ -424,12 +420,12 @@
         <div class="stats-matrix" id="display-stats6" style="grid-column: 2; grid-row: 3;"></div>
       </div>
       <div class="counter-holder">
-        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b></b></div>
+        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b>0</b></div>
       </div>
     </div>
     <div class="info-container" id="pop-up3">
@@ -452,12 +448,12 @@
         <div class="stats-matrix" id="display-stats6" style="grid-column: 2; grid-row: 3;"></div>
       </div>
       <div class="counter-holder">
-        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b></b></div>
+        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b>0</b></div>
       </div>
     </div>
     <div class="info-container" id="pop-up4">
@@ -480,12 +476,12 @@
         <div class="stats-matrix" id="display-stats6" style="grid-column: 2; grid-row: 3;"></div>
       </div>
       <div class="counter-holder">
-        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b></b></div>
-        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b></b></div>
+        <div class="counter-matrix" id="display-counter1"><a class="fa-solid fa-dice-one"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter2"><a class="fa-solid fa-dice-two"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter3"><a class="fa-solid fa-dice-three"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter4"><a class="fa-solid fa-dice-four"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter5"><a class="fa-solid fa-dice-five"></a><b>0</b></div>
+        <div class="counter-matrix" id="display-counter6"><a class="fa-solid fa-dice-six"></a><b>0</b></div>
       </div>
     </div>
     <div class="win-container">
