added all six elements and scoring system

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <a class="fa-solid fa-square"></a>
         </button>
         <div id="texts" style="left: 0px">
-          <h6>Turns : 0 Rolls : 0</h6>
+          <h6>Turns : 0 Rolls : 0 Score : 0</h6>
         </div>
         <div class="pieces">
           <button class="piece" id="piece1-red">
@@ -241,7 +241,7 @@
           <a class="fa-solid fa-square"></a>
         </button>
         <div id="texts">
-          <h6>Turns : 0 Rolls : 0</h6>
+          <h6>Turns : 0 Rolls : 0 Score : 0</h6>
         </div>
         <div class="pieces">
           <button class="piece" id="piece1-green">
@@ -290,7 +290,7 @@
           <a class="fa-solid fa-square"></a>
         </button>
         <div id="texts">
-          <h6>Turns : 0 Rolls : 0</h6>
+          <h6>Turns : 0 Rolls : 0 Score : 0</h6>
         </div>
         <div class="pieces">
           <button class="piece" id="piece1-blue">
@@ -337,7 +337,7 @@
           <a class="fa-solid fa-square"></a>
         </button>
         <div id="texts" style="left: 0px">
-          <h6>Turns : 0 Rolls : 0</h6>
+          <h6>Turns : 0 Rolls : 0 Score : 0</h6>
         </div>
         <div class="pieces">
           <button class="piece" id="piece1-yellow">
@@ -378,17 +378,14 @@
         </div>
         <div class="stats-matrix" id="display-stats3"
           style="grid-column: 1; grid-row: 2; border-right: 3px solid black; border-bottom: 3px solid black;">
-          Safe Zone: 0
         </div>
         <div class="stats-matrix" id="display-stats4"
           style="grid-column: 2; grid-row: 2; border-bottom: 3px solid black;">
         </div>
         <div class="stats-matrix" id="display-stats5"
           style="grid-column: 1; grid-row: 3; border-right: 3px solid black;">
-          Three Sixes: 0
         </div>
         <div class="stats-matrix" id="display-stats6" style="grid-column: 2; grid-row: 3;">
-          F: 0
         </div>
       </div>
       <div class="counter-holder">
